# ai-sdlc-virtual-office

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  ai-dlc-development-sprint-skill.md  fix_quotes.py
backend/: .env.example  Dockerfile  alembic.ini  create_tables.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_data.py  0003_github_tables.py  0004_mcp_tables.py  0005_rag_chunks.py  0006_add_workspace_path.py  0007_add_users.py  0008_per_agent_model_defaults.py  0009_devops_document_type.py  0010_seed_devops_agent.py  0011_agent_skill_markdown.py  0012_technical_design_step.py  0013_code_review_agent.py  0014_test_report_document_type.py  0015_build_report_document_type.py  0016_monitoring_agent.py  0017_multi_developer_agents.py  0018_anthropic_provider.py  0019_tech_stack_config.py  0020_connector_settings.py  0021_figma_settings.py  0022_diagram_spec_document_type.py  0023_figma_mcp_tools.py  0024_drawio_mcp_tools.py
backend/app/: main.py
backend/app/agents/: _workspace.py  ba_agent.py  change_impact_agent.py  code_review_agent.py  dev_agent.py  devops_agent.py  documentation_agent.py  gap_analysis_agent.py  monitoring_agent.py  pm_agent.py  qa_agent.py  requirement_agent.py  sa_agent.py  technical_design_agent.py  ux_agent.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/db/: base.py  models.py  (+1 more)
backend/tests/: conftest.py  test_agent_contract_service.py  test_change_impact_trigger.py  test_dev_agent_fanout.py  test_pipeline.py  test_projects.py
(+224 files in other folders)
