[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sdlc-backend"
version = "0.1.0"
description = "AI-SDLC Working Office — FastAPI backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
